--- a/judger-web/projects/main/src/app/pages/contest-pages/contest-detail-page/contest-detail-page.component.html
+++ b/judger-web/projects/main/src/app/pages/contest-pages/contest-detail-page/contest-detail-page.component.html
@@ -76,7 +76,7 @@
                     mat-flat-button color="primary">
                 참가신청
             </button>
-          <a *ngIf=" isTestPeriod || isAfterTestPeriod" class="text-white me-2 no-border-radius"
+          <a *ngIf=" isTestPeriod || isAfterTestPeriod" class="text-white no-border-radius"
              mat-flat-button color="primary"
              routerLink="/scoreboard"
              [queryParams]="{contest: contest?._id}">
