--- a/judger-web/projects/main/src/app/pages/problem-pages/problem-form-page/problem-form-page.component.html
+++ b/judger-web/projects/main/src/app/pages/problem-pages/problem-form-page/problem-form-page.component.html
@@ -135,7 +135,8 @@
             </button>
             <button mat-flat-button
                     class="block no-border-radius"
-                    color="primary">{{modifying ? '수정' : '등록'}}</button>
+                    color="primary">{{modifying ? '수정' : '등록'}}
+            </button>
         </div>
     </form>
 </div>
