--- a/judger-web/projects/main/src/app/pages/submit-pages/submit-list-page/submit-list-page.component.html
+++ b/judger-web/projects/main/src/app/pages/submit-pages/submit-list-page/submit-list-page.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="flex p-2 border" *ngFor="let submit of submits">
-        <span *ngIf="!submit.result" class="text-accent me-auto">체점 중</span>
+        <span *ngIf="!submit.result" class="text-accent me-auto">채점 중</span>
         <ng-container *ngIf="submit.result">
             <span class="me-2"
                   [class.text-warn]="submit.result.type !== 'done'"
