--- a/judger-web/projects/main/src/app/pages/assignment-pages/assignment-form-page/assignment-form-page.component.html
+++ b/judger-web/projects/main/src/app/pages/assignment-pages/assignment-form-page/assignment-form-page.component.html
@@ -15,7 +15,7 @@
     </h2>
     <div class="flex pb-2 mb-2 border-bottom mobile-column">
       <span class="font-s me-auto" [class.mb-1]="layout.mobile$ | async"
-        >대회시간: {{ contest | testPeriod }}</span
+        >과제제출기간: {{ contest | testPeriod }}</span
       >
       <span class="font-s me-2" [class.mb-1]="layout.mobile$ | async"
         >등록일: {{ contest?.createdAt | date: "yyyy.MM.dd." }}</span
@@ -46,7 +46,7 @@
       >
     </mat-form-field>
     <div class="mb-4">
-      <label class="mb-1">대회 시간</label>
+      <label class="mb-1">과제 제출 기한</label>
       <sw-period-control
         [errorStateMatcher]="errorMatcher"
         formControlName="testPeriod"
@@ -54,7 +54,7 @@
       <span
         class="error block relative period-error"
         *ngIf="hasError('required', 'testPeriod')"
-        >대회 시간을 설정해주세요.</span
+        >과제 제출 기한을 설정해주세요.</span
       >
       <span
         class="error block relative period-error"
