--- a/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -11,23 +11,23 @@
         <td mat-cell *matCellDef="let row; let i = index">{{ getNo(i) }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="content">
+      <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>과제 제목</th>
         <td mat-cell *matCellDef="let row">{{ row.assignment.title }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="title">
+      <ng-container matColumnDef="course">
         <th mat-header-cell *matHeaderCellDef>과목명(분반)</th>
         <td mat-cell *matCellDef="let row">{{ row.course }}</td>
       </ng-container>
 
       <ng-container matColumnDef="writer">
-        <th mat-header-cell *matHeaderCellDef>작성자</th>
+        <th mat-header-cell *matHeaderCellDef>담당교수</th>
         <td mat-cell *matCellDef="let row">{{ row.writer.name }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>등록일</th>
+      <ng-container matColumnDef="deadline">
+        <th mat-header-cell *matHeaderCellDef>과제 마감 기한</th>
         <td mat-cell *matCellDef="let row">
           {{ row.createdAt | date: "yyyy.MM.dd." }}
         </td>
@@ -37,7 +37,7 @@
       <tr
         mat-row
         *matRowDef="let row; columns: columns"
-        [routerLink]="['/problem/detail', row._id]"
+        [routerLink]="['/assignment/detail', row._id]"
         [queryParams]="{ contest: row.contest._id }"
         class="cursor pointer"
       ></tr>
