--- a/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -29,7 +29,7 @@
       <ng-container matColumnDef="deadline">
         <th mat-header-cell *matHeaderCellDef>과제 마감 기한</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.createdAt | date: "yyyy.MM.dd." }}
+          {{ row.deadline | date: "yyyy.MM.dd." }}
         </td>
       </ng-container>
 
@@ -38,7 +38,7 @@
         mat-row
         *matRowDef="let row; columns: columns"
         [routerLink]="['/assignment/detail', row._id]"
-        [queryParams]="{ contest: row.contest._id }"
+        [queryParams]="{ contest: row.assignment._id }"
         class="cursor pointer"
       ></tr>
 
