--- a/judger-web/projects/main/src/app/pages/assignment-pages/assignment-form-page/assignment-form-page.component.html
+++ b/judger-web/projects/main/src/app/pages/assignment-pages/assignment-form-page/assignment-form-page.component.html
@@ -1,179 +1,105 @@
-<div class="main-container mt-2">
-  <ng-container *ngIf="!assignment; else contestProblemTemplate">
-    <h2 class="page-title mb-2">과제 {{ modifying ? "수정" : "등록" }}</h2>
-    <div class="flex justify-end pb-2 mb-2 border-bottom">
-      <span class="font-s">작성자: {{ auth.me?.name }}</span>
-    </div>
-  </ng-container>
-
-  <ng-template #contestProblemTemplate>
-    <h2 class="page-title mb-2 flex mobile-column">
-      <span class="text-primary me-1">{{ assignment.title }}</span>
-      <span [class.mt-2]="layout.mobile$ | async"
-        >문제 {{ modifying ? "수정" : "등록" }}</span
-      >
-    </h2>
-    <div class="flex pb-2 mb-2 border-bottom mobile-column">
-      <span class="font-s me-auto" [class.mb -1]="layout.mobile$ | async"
-        >과제제출기간: {{ contest | testPeriod }}</span
-      >
-      <span class="font-s me-2" [class.mb-1]="layout.mobile$ | async"
-        >등록일: {{ contest?.createdAt | date: "yyyy.MM.dd." }}</span
-      >
-      <span class="font-s">작성자: {{ auth.me?.name }}</span>
-    </div>
-  </ng-template>
-
-  <form [formGroup]="formGroup" (ngSubmit)="submit()">
-    <mat-form-field
-      class="mb-2"
-      [class.w-70]="layout.desktop$ | async"
-      [class.w-100]="layout.mobile$ | async"
-    >
-      <mat-label>제목</mat-label>
+<form class="main-container mt-4" [formGroup]="formGroup" (ngSubmit)="submit()">
+  <h2 class="page-title mb-1">과제등록</h2>
+  <div>
+    <mat-form-field class="w-75">
+      <mat-label>수업명</mat-label>
       <input
         matInput
-        formControlName="title"
-        [errorStateMatcher]="errorMatcher"
-        type="text"
-        required
-        placeholder="Ex. Hello World"
         autocomplete="off"
+        formControlName="course"
+        [errorStateMatcher]="errorMatcher"
+        placeholder="Ex. 응용컴퓨터프로그래밍(3)"
       />
-      <mat-hint>과제 제목을 입력해주세요.</mat-hint>
-      <mat-error *ngIf="hasError('required', 'title')"
-        >제목은 필수 입력 항목입니다.</mat-error
+      <mat-hint>수업명을 입력해주세요.</mat-hint>
+      <mat-error *ngIf="hasError('required', 'course')">
+        수업명은 필수 입력 항목입니다.</mat-error
       >
     </mat-form-field>
-    <div class="mb-4">
-      <label class="mb-1">과제 제출 기한</label>
-      <sw-period-control
+  </div>
+  <div class="py-2 border-bottom">
+    <mat-form-field class="w-75">
+      <mat-label>과제명</mat-label>
+      <input
+        matInput
+        autocomplete="off"
+        formControlName="title"
         [errorStateMatcher]="errorMatcher"
-        formControlName="testPeriod"
-      ></sw-period-control>
-      <span
-        class="error block relative period-error"
-        *ngIf="hasError('required', 'testPeriod')"
-        >과제 제출 기한을 설정해주세요.</span
+        placeholder="Ex. 응용컴퓨터프로그래밍 2주차 과제"
+      />
+      <mat-hint>과제명을 입력해주세요.</mat-hint>
+      <mat-error *ngIf="hasError('required', 'title')">
+        과제명은 필수 입력 항목입니다.</mat-error
       >
-      <span
-        class="error block relative period-error"
-        *ngIf="hasError('invalidPeriod', 'testPeriod')"
-        >시작시간은 종료시간 이전이어야 합니다.</span
-      >
-    </div>
-    <div class="mb-2 flex mobile-column">
-      <mat-form-field
-        class="w-100"
-        formGroupName="options"
-        [class.grow-1]="layout.desktop$ | async"
-        [class.shrink-1]="layout.desktop$ | async"
-        [class.me-2]="layout.desktop$ | async"
-        [class.mb-2]="layout.mobile$ | async"
-      >
-        <mat-label>최대 실행 시간</mat-label>
-        <input
-          matInput
-          formControlName="maxRealTime"
-          [errorStateMatcher]="errorMatcher"
-          type="number"
-          placeholder="수행 시간 입력"
-          required
-          autocomplete="off"
-        />
-        <mat-hint>테스트 당 최대 수행 시간을 ms 단위로 입력해주세요.</mat-hint>
-        <mat-error *ngIf="hasError('required', ['options', 'maxRealTime'])">
-          테스트 당 최대 수행시간은 필수 입력 항목입니다.
-        </mat-error>
-        <mat-error *ngIf="hasError('min', ['options', 'maxRealTime'])">
-          최소 1ms 이상이여야 합니다.
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field
-        class="w-100"
-        formGroupName="options"
-        [class.grow-1]="layout.desktop$ | async"
-        [class.shrink-1]="layout.desktop$ | async"
-        [class.me-2]="layout.desktop$ | async"
-        [class.mb-2]="layout.mobile$ | async"
-      >
-        <mat-label>최대 메모리 사용량</mat-label>
-        <input
-          matInput
-          formControlName="maxMemory"
-          [errorStateMatcher]="errorMatcher"
-          type="number"
-          placeholder="메모리 사용량 입력"
-          required
-          autocomplete="off"
-        />
-        <mat-hint
-          >테스트 당 최대 사용 메모리를 MB 단위로 입력해주세요.</mat-hint
-        >
-        <mat-error *ngIf="hasError('required', ['options', 'maxMemory'])">
-          테스트 당 최대 사용 메모리는 필수 입력 항목입니다.
-        </mat-error>
-        <mat-error *ngIf="hasError('min', ['options', 'maxMemory'])">
-          최소 1MB 이상이여야 합니다.
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field
-        *ngIf="!!assignment"
-        class="w-100"
-        [class.grow-1]="layout.desktop$ | async"
-        [class.shrink-1]="layout.desktop$ | async"
-        [class.mb-2]="layout.mobile$ | async"
-      >
-        <mat-label>점수</mat-label>
-        <input
-          matInput
-          formControlName="score"
-          [errorStateMatcher]="errorMatcher"
-          type="number"
-          placeholder="점수 입력"
-          required
-          autocomplete="off"
-        />
-        <mat-hint>문제의 점수를 입력해주세요.</mat-hint>
-        <mat-error *ngIf="hasError('required', 'score')">
-          점수는 필수 입력항목입니다.
-        </mat-error>
-        <mat-error *ngIf="hasError('min', 'score')">
-          점수는 음수가 될 수 없습니다.
-        </mat-error>
-      </mat-form-field>
-    </div>
+    </mat-form-field>
+    <div class="flex justify-end font-s">작성자: {{ auth.me?.name }}</div>
+  </div>
 
-    <div class="mb-4 pb-4 border-bottom">
-      <label class="block required mb-1">문제 파일</label>
-      <sw-pdf-uploader-control
-        formControlName="content"
-      ></sw-pdf-uploader-control>
-      <span class="error" *ngIf="hasError('required', 'content')">
-        문제 파일은 필수 입력 항목입니다.
-      </span>
-    </div>
+  <div class="mb-2">
+    <ckeditor
+      formControlName="content"
+      [class.has-error]="invalid('content')"
+      [editor]="Editor"
+      [config]="config"
+      (ready)="onReady($event)"
+    ></ckeditor>
+    <span class="error block" *ngIf="hasError('required', 'content')">
+      대회의 내용은 필수 입력 항목입니다.</span
+    >
+  </div>
 
-    <div class="mb-2">
-      <label class="block required mb-1">입/출력 파일 셋</label>
-      <sw-io-set-control formControlName="ioSet"></sw-io-set-control>
-      <span class="error" *ngIf="hasError('required', 'ioSet')">
-        입/출력 파일셋을 하나 이상 올려야 합니다.
-      </span>
-    </div>
+  <div class="mb-4">
+    <label class="mb-1">과제 제출 기한</label>
+    <sw-period-control
+      [errorStateMatcher]="errorMatcher"
+      formControlName="testPeriod"
+    ></sw-period-control>
+    <span
+      class="error block relative period-error"
+      *ngIf="hasError('required', 'testPeriod')"
+      >과제 기간을 설정해주세요.</span
+    >
+    <span
+      class="error block relative period-error"
+      *ngIf="hasError('invalidPeriod', 'testPeriod')"
+      >시작기간은 종료기간 이전이어야 합니다.</span
+    >
+  </div>
 
-    <div class="flex justify-end">
-      <button
-        type="button"
-        mat-flat-button
-        class="block no-border-radius me-2"
-        (click)="cancel()"
-      >
-        취소
-      </button>
-      <button mat-flat-button class="block no-border-radius" color="primary">
-        {{ modifying ? "수정" : "등록" }}
-      </button>
-    </div>
-  </form>
-</div>
+  <div class="mb-4">
+    <mat-checkbox color="primary" formControlName="isApplyingPeriod"
+      >신청기간 설정</mat-checkbox
+    >
+    <span class="help block">
+      <i class="las la-info-circle me-1"></i>
+      신청기간을 설정하지 않은 경우 대회가 시작하기 전까지 언제든 신청이
+      가능합니다.
+    </span>
+    <sw-period-control
+      *ngIf="isApplyingPeriod"
+      [errorStateMatcher]="errorMatcher"
+      formControlName="applyingPeriod"
+    ></sw-period-control>
+    <span
+      class="error block relative period-error"
+      *ngIf="hasError('requiredApplyingPeriod')"
+      >신청기간을 설정해주세요.</span
+    >
+    <span
+      class="error block relative period-error"
+      *ngIf="hasError('invalidApplyingPeriod')"
+      >시작시간은 종료시간 이전이어야 합니다.</span
+    >
+    <span
+      class="error block relative period-error"
+      *ngIf="hasError('overlapApplyingPeriod')"
+      >신청기간은 대회 시작 시간 이전이어야 합니다.</span
+    >
+  </div>
+
+  <div class="flex justify-end">
+    <a class="me-2" mat-flat-button (click)="cancel()">취소</a>
+    <button mat-flat-button color="primary">
+      {{ modifying ? "수정" : "등록" }}
+    </button>
+  </div>
+</form>
