--- a/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/judger-web/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -12,24 +12,29 @@
       </ng-container>
 
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>과제 제목</th>
-        <td mat-cell *matCellDef="let row">{{ row.assignment.title }}</td>
+        <th mat-header-cell *matHeaderCellDef>과제명</th>
+        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="course">
-        <th mat-header-cell *matHeaderCellDef>과목명(분반)</th>
+        <th mat-header-cell *matHeaderCellDef>수업명</th>
         <td mat-cell *matCellDef="let row">{{ row.course }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="writer">
-        <th mat-header-cell *matHeaderCellDef>담당교수</th>
-        <td mat-cell *matCellDef="let row">{{ row.writer.name }}</td>
+      <ng-container matColumnDef="testPeriod">
+        <th mat-header-cell *matHeaderCellDef>과제 제출 기한</th>
+        <td mat-cell *matCellDef="let row">{{ row.testPeriod }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="deadline">
-        <th mat-header-cell *matHeaderCellDef>과제 마감 기한</th>
+      <ng-container matColumnDef="writer">
+        <th mat-header-cell *matHeaderCellDef>작성자</th>
+        <td mat-cell *matCellDef="let row">{{ row.writer?.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>등록일</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.deadline | date: "yyyy.MM.dd." }}
+          {{ row.createdAt | date: "yyyy.MM.dd." }}
         </td>
       </ng-container>
 
@@ -38,13 +43,12 @@
         mat-row
         *matRowDef="let row; columns: columns"
         [routerLink]="['/assignment/detail', row._id]"
-        [queryParams]="{ contest: row.assignment._id }"
         class="cursor pointer"
       ></tr>
 
       <tr class="mat-row empty-row" *matNoDataRow>
         <td [attr.colspan]="columns.length" class="px-2">
-          <span>공개된 문제가 없습니다.</span>
+          <span>등록된 대회가 없습니다.</span>
         </td>
       </tr>
     </table>
