--- a/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.html
+++ b/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.html
@@ -1,4 +1,4 @@
-<div class="main-container mt-2">
+<!-- <div class="main-container mt-2">
     <h2 class="page-title mb-2">{{problem?.title}}</h2>
     <div class="flex pb-2 mb-2 border-bottom">
         <span *ngIf="contest" class="font-s me-2">대회: {{contest?.title}}</span>
@@ -63,4 +63,4 @@
             <mat-icon>arrow_forward_ios</mat-icon>
         </button>
     </div>
-</div>
+</div> -->
