--- a/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.html
+++ b/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.html
@@ -3,6 +3,8 @@
   <div class="flex pb-2 mb-2 border-bottom">
     <span *ngIf="contest" class="font-s me-2">대회: {{ contest?.title }}</span>
     <span *ngIf="contest" class="font-s">점수: {{ problem?.score }}</span>
+    <span *ngIf="assignment" class="font-s me-2">과제: {{ assignment?.title }}</span>
+    <span *ngIf="assignment" class="font-s">점수: {{ problem?.score }}</span>
     <span class="font-s ms-auto">작성자: {{ problem?.writer.name }}</span>
   </div>
 
