Fix: 과제 시간 안 받아지는 오류

--- a/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
@@ -4,11 +4,11 @@
     <span class="font-s me-auto">
       과제시간:&nbsp;
       <span *ngIf="(assignment?.testPeriod | periodRange | async) === -1" class="fw-700">
-        {{ contest | testPeriod }}
+        {{ assignment | testPeriod }}
         <span class="text-accent fw-700">({{ assignment.testPeriod.start | restTime | async }} 전)</span>
       </span>
       <span *ngIf="(assignment?.testPeriod | periodRange | async) === 0" class="text-warn fw-900">
-        <span class="text-warn fw-900">{{ contest.testPeriod.end | restTime | async }} 남음</span>
+        <span class="text-warn fw-900">{{ assignment.testPeriod.end | restTime | async }} 남음</span>
       </span>
       <span *ngIf="(assignment?.testPeriod | periodRange | async) === 1" class="text-primary"> 종료 </span>
     </span>
