Design 문제 피이지 이동 버튼에 패딩 부여

--- a/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
@@ -19,7 +19,7 @@
     <div class="border-box" [swInnerHtml]="assignment?.content"></div>
   </div>
 
-  <div class="flex justify-end">
+  <div class="flex justify-end" style="padding-bottom: 10px">
     <a
       *ngIf="isTestPeriod"
       class="no-border-radius"
