--- a/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>등록일</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.createdAt | date: "yyyy.MM.dd." }}
+          {{ row.createdAt | date: 'yyyy.MM.dd.' }}
         </td>
       </ng-container>
 
@@ -48,7 +48,7 @@
 
       <tr class="mat-row empty-row" *matNoDataRow>
         <td [attr.colspan]="columns.length" class="px-2">
-          <span>등록된 대회가 없습니다.</span>
+          <span>등록된 과제가 없습니다.</span>
         </td>
       </tr>
     </table>
