--- a/projects/main/src/app/pages/problem-pages/problem-list-page/problem-list-page.component.html
+++ b/projects/main/src/app/pages/problem-pages/problem-list-page/problem-list-page.component.html
@@ -5,48 +5,46 @@
       <mat-spinner></mat-spinner>
     </div>
 
-    <table mat-table
-           [dataSource]="documents">
-
+    <table mat-table [dataSource]="documents">
       <ng-container matColumnDef="no">
         <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let row;let i = index">{{getNo(i)}}</td>
+        <td mat-cell *matCellDef="let row; let i = index">{{ getNo(i) }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="content">
-        <th mat-header-cell *matHeaderCellDef>대회명</th>
-        <td mat-cell *matCellDef="let row">{{row.contest.title}}</td>
-      </ng-container>
+      <!-- <ng-container matColumnDef="content">
+        <th mat-header-cell *matHeaderCellDef>대회 혹은 과제명</th>
+        <td mat-cell *matCellDef="let row">{{ row.parent.title }}</td>
+      </ng-container> -->
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>문제명</th>
-        <td mat-cell *matCellDef="let row">{{row.title}}</td>
+        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="writer">
         <th mat-header-cell *matHeaderCellDef>작성자</th>
-        <td mat-cell *matCellDef="let row">{{row.writer.name}}</td>
+        <td mat-cell *matCellDef="let row">{{ row.writer.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>등록일</th>
-        <td mat-cell *matCellDef="let row">{{row.createdAt | date: 'yyyy.MM.dd.'}}</td>
+        <td mat-cell *matCellDef="let row">{{ row.createdAt | date: 'yyyy.MM.dd.' }}</td>
       </ng-container>
 
-
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row
-          *matRowDef="let row; columns: columns"
-          [routerLink]="['/problem/detail', row._id]"
-          [queryParams]="{ contest: row.contest._id }"
-          class="cursor pointer"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: columns"
+        [routerLink]="['/problem/detail', row._id]"
+        [queryParams]="{ contest: row.contest._id }"
+        class="cursor pointer"
+      ></tr>
 
       <tr class="mat-row empty-row" *matNoDataRow>
         <td [attr.colspan]="columns.length" class="px-2">
           <span>공개된 문제가 없습니다.</span>
         </td>
       </tr>
-
     </table>
   </div>
 </div>
