--- a/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -52,5 +52,13 @@
         </td>
       </tr>
     </table>
+    <mat-paginator
+      [length]="total"
+      [pageSize]="limit"
+      [pageSizeOptions]=[10,25,50,100]
+      (page)="changePage($event)"
+    >
+    </mat-paginator>
   </div>
 </div>
+
