--- a/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -5,6 +5,15 @@
       <mat-spinner></mat-spinner>
     </div>
 
+    <div class="flex align-center mb-2">
+      <mat-form-field class="w-60">
+        <mat-label>검색</mat-label>
+        <span matPrefix style="margin-right: 1rem;"><i class="las la-search"></i></span>
+        <input matInput [formControl]="keywordControl" autocomplete="off" placeholder="Ex. 응용컴퓨터프로그래밍" />
+        <mat-hint>과제명, 수업명, 교수명으로 검색</mat-hint>
+      </mat-form-field>
+    </div>
+
     <table mat-table [dataSource]="documents">
       <ng-container matColumnDef="no">
         <th mat-header-cell *matHeaderCellDef>#</th>
@@ -27,7 +36,7 @@
       </ng-container>
 
       <ng-container matColumnDef="writer">
-        <th mat-header-cell *matHeaderCellDef>작성자</th>
+        <th mat-header-cell *matHeaderCellDef>교수명</th>
         <td mat-cell *matCellDef="let row">{{ row.writer?.name }}</td>
       </ng-container>
 
