--- a/projects/main/src/app/pages/main-page/main-page.component.html
+++ b/projects/main/src/app/pages/main-page/main-page.component.html
@@ -36,7 +36,7 @@
                 <sw-my-registered-contest></sw-my-registered-contest>
             </div>
             <div *ngIf="isAdmin">
-                <h3 class="text-center mt-5">관리자 권한으로 로그인중입니다</h3>
+                <h3 class="text-center">관리자 권한으로 로그인중입니다</h3>
             </div>
         </ng-container>
         <ng-template #loginTamplate>
