--- a/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
@@ -22,7 +22,7 @@
 
   <div *ngIf="isStudent | async" class="flex justify-end" style="padding-bottom: 10px">
 
-    <button class="no-border-radius me-2"
+    <button class="no-border-radius"
                   mat-flat-button
                   color="primary"
                   style="color: white"
@@ -59,6 +59,13 @@
     >
       <i class="las la-edit"></i><span class="ms-2 mobile-d-none">과제 수정</span>
     </button>
+
+        <button
+          class="text-white me-2 no-border-radius"
+          mat-flat-button color="accent"
+          [routerLink]="['/assignment', assignment?._id, 'submits']">
+          <i class="las la-edit"></i><span class="ms-2 mobile-d-none">과제 제출 목록</span>
+        </button>
 
     <button
       class="text-white me-2 no-border-radius"
