--- a/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -1,5 +1,5 @@
 <div class="main-container mt-2">
-  <h2 class="mb-2">과제 목록</h2>
+  <h2 class="mb-2">교과목 목록</h2>
   <div class="table-wrapper">
     <div class="loading" *ngIf="loading">
       <mat-spinner></mat-spinner>
