--- a/projects/main/src/app/pages/assignment-pages/my-assignment-list-page/my-assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/my-assignment-list-page/my-assignment-list-page.component.html
@@ -1,5 +1,5 @@
 <div class="main-container mt-2">
-    <h2 class="mb-2">과제 관리</h2>
+    <h2 class="mb-2">교과목 관리</h2>
 
     <div class="flex align-center mb-2">
         <mat-form-field class="w-60">
@@ -23,38 +23,38 @@
                     <th mat-header-cell *matHeaderCellDef>#</th>
                     <td mat-cell *matCellDef="let row; let i = index">{{ getNo(i) }}</td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef>과제명</th>
                     <td mat-cell *matCellDef="let row">{{ row.title }}</td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="course">
                     <th mat-header-cell *matHeaderCellDef>수업명</th>
                     <td mat-cell *matCellDef="let row">{{ row.course }}</td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="testPeriod">
                     <th mat-header-cell *matHeaderCellDef>과제 제출 기한</th>
                     <td mat-cell *matCellDef="let row">{{ row | testPeriod }}</td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="writer">
                     <th mat-header-cell *matHeaderCellDef>작성자</th>
                     <td mat-cell *matCellDef="let row">{{ row.writer?.name }}</td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="createdAt">
                     <th mat-header-cell *matHeaderCellDef>등록일</th>
                     <td mat-cell *matCellDef="let row">
                         {{ row.createdAt | date: 'yyyy.MM.dd.' }}
                     </td>
                 </ng-container>
-            
+
                 <tr mat-header-row *matHeaderRowDef="columns"></tr>
                 <tr mat-row *matRowDef="let row; columns: columns" [routerLink]="['/assignment/detail', row._id]"
                     class="cursor pointer"></tr>
-            
+
                 <tr class="mat-row empty-row" *matNoDataRow>
                     <td [attr.colspan]="columns.length" class="px-2">
                         <span>등록된 과제가 없습니다.</span>
