--- a/projects/main/src/app/pages/notice-pages/notice-main-page/notice-main-page.component.html
+++ b/projects/main/src/app/pages/notice-pages/notice-main-page/notice-main-page.component.html
@@ -1,1 +1,29 @@
-<p>notice-main-page works!</p>
+<div class="main-container mt-2">
+  <h2 class="mb-2 pb-2 border-bottom">공지사항</h2>
+  <div class="border-bottom mb-2 pb-2">
+    <h3>상기 시스템은 베타 테스트 중에 있습니다.<br>사용에 있어 궁금하신 사항은 SW중심사업단홈페이지의 E-help 데스크 혹은 아래 이메일로 연락주세요.</h3>
+    <br>
+    <h4>이메일 : lee505052@naver.com</h4>
+    <br><br><br>
+
+    <span class="fw-700">
+      컴파일러 버전 정보:
+      <br>
+      c : gnu11
+      <br>
+      c++ : c++14
+      <br>
+      python2: 2.7.17
+      <br>
+      python3: 3.9.2
+      <br>
+      openjdk: 1.8.0_292
+      <br>
+      kotlin: 1.5.31-release-548
+      <br>
+      go: 1.17.2
+      <br>
+      node: 10.24.1
+    </span>
+  </div>
+</div>
