Fix: 라우팅 오류 수정

--- a/projects/main/src/app/pages/assignment-pages/assignment-problem-list-page/assignment-problem-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-problem-list-page/assignment-problem-list-page.component.html
@@ -60,6 +60,14 @@
       <span class="me-auto">{{ i + 1 }}) {{ problem.title }}</span>
     </a>
   </ng-container>
+  <button
+    type="button"
+    mat-flat-button
+    color="primary"
+    [routerLink]="['/assignment/detail', assignment?._id]"
+  >
+    뒤로가기
+  </button>
   <ng-template #orderingTemplete>
     <div cdkDropList (cdkDropListDropped)="drop($event)">
       <div
