--- a/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
+++ b/projects/main/src/app/pages/assignment-pages/assignment-list-page/assignment-list-page.component.html
@@ -20,14 +20,14 @@
         <td mat-cell *matCellDef="let row; let i = index">{{ getNo(i) }}</td>
       </ng-container>
 
+            <ng-container matColumnDef="course">
+              <th mat-header-cell *matHeaderCellDef>수업명</th>
+              <td mat-cell *matCellDef="let row">{{ row.course }}</td>
+            </ng-container>
+
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>과제명</th>
         <td mat-cell *matCellDef="let row">{{ row.title }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="course">
-        <th mat-header-cell *matHeaderCellDef>수업명</th>
-        <td mat-cell *matCellDef="let row">{{ row.course }}</td>
       </ng-container>
 
       <ng-container matColumnDef="testPeriod">
@@ -40,12 +40,12 @@
         <td mat-cell *matCellDef="let row">{{ row.writer?.name }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="createdAt">
+      <!-- <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>등록일</th>
         <td mat-cell *matCellDef="let row">
           {{ row.createdAt | date: 'yyyy.MM.dd.' }}
         </td>
-      </ng-container>
+      </ng-container> -->
 
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr
