--- a/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
+++ b/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
@@ -38,15 +38,15 @@
   </div>
   <span class="flex justify-between border-bottom pb-2" style="font-weight: bold;">
     <span class="px-2 border-right"
-        [class.text-warn]="submit.result.type !== 'done'"
-        [class.text-primary]="submit.result.type === 'done'"
+        [class.text-warn]="submit?.result?.type !== 'done'"
+        [class.text-primary]="submit?.result?.type === 'done'"
         >
-        체점결과: {{submit.result.type | submitResultType}}
+        채점결과: {{(submit?.result?.type | submitResultType) || "채점중"}}
     </span>
     <span>
-      <span class="px-2 border-right border-left">언어: {{submit.language}}</span>
-      <span class="px-2 border-right">실행시간: {{submit.result.time}}ms</span>
-      <span class="ms-2 pe-2">사용메모리: {{submit.result.memory / (1024 * 1024) | number:'1.0-4'}}MB</span>
+      <span class="px-2 border-right border-left">언어: {{submit?.language || "-"}}</span>
+      <span class="px-2 border-right">실행시간: {{submit?.result?.time || "-" }}ms</span>
+      <span class="ms-2 pe-2">사용메모리: {{submit?.result?.memory / (1024 * 1024) | number:'1.0-4' || "-" }}MB</span>
     </span>
   </span>
 </div>
